# custom-browser

./: Cargo.toml  test.capsule
.github/workflows/: release.yml
src/: main.rs
src/capsule/: mod.rs  obj.rs  parser.rs
src/capsule/objs/: mod.rs  obj.rs  script.rs  text.rs  view.rs
src/event/: mod.rs  obj_event.rs  update.rs
src/layout/: computed.rs  computer.rs  dirty.rs  mod.rs  styling.rs
src/layout/capsule/: align.rs  color.rs  dimension.rs  flexdir.rs  justify.rs  mod.rs
src/lua/: engine.rs  holder.rs  mod.rs
src/lua/modules/: mod.rs
src/renderer/: constants.rs  full.rs  mod.rs  text.rs
